Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-30 (SVN):
    * oslibs, windows codecs: Recompiled mpg123 from latest 1.13.4 release.

2011-10-27 (SVN):
    * cd_sdl.c: Simplified, making it similar to cd_linux.c or cd_bsd.c by
      performing checks every two seconds in CDAudio_Update() and caching
      the last check time.

2011-10-26 (SVN):
    * recompiled all windows x64 dlls using a new, gcc-4.5-based toolchain.

2011-10-24 (SVN):
    * engine, sys_unix.c (Sys_GetUserdir): Adjustments to failure messages.
      Moved Sys_mkdir() call to the caller main(). Made the local home_dir
      pointer const.
    * hw_utils, hwmaster/sys_main.c: Likewise.
    * bumped versions for the hexen2 engine to 1.24, hexenworld to 0.24 and
      hwmaster to 1.2.7.

2011-10-24 (SVN):
    * launcher/main.c (Sys_Error): Removed exitcode argument and made it
      to always use EXIT_FAILURE. Adjusted callers.
      (Sys_SearchCommand): Adjustments to failure messages. Added some
      paranoid checks against buffer size deficiencies.
      (Sys_FindBinDir): Constified the filename argument. Adjustments to
      failure messages. Added some paranoid checks against buffer size
      deficiencies. Handled some unlikely corner cases.
      (Sys_GetUserdir): Adjustments to failure messages. Moved Sys_mkdir
      call to the caller (main()). Made the local home_dir pointer const.
      (main): Removed zeroing the basedir array; not necessary anymore.
      Adjusted Sys_FindBinDir() call after the above mentioned changes.
      Moved Sys_mkdir() call for userdir from Sys_GetUserdir() to here.
    * launcher_defs.h: Incremented the version to 1.0.6.

2011-10-24 (SVN):
    * launcher/main.c (Sys_SearchCommand): Changed the size of the arrays
      used with realpath() from MAX_OSPATH to PATH_MAX.  This "fixes" the
      umm, "crash" when launcher is compiled against new glibc, because